fix: add missing paddings in grid rows

--- a/src/grid/index.styl
+++ b/src/grid/index.styl
@@ -17,6 +17,8 @@
   flex-flow var(--flexDirection) var(--flexWrap)
   gap var(--gapRow) var(--gapColumn)
   justify-content var(--justifyContent)
+  padding-left var(--gapColumn)
+  padding-right var(--gapColumn)
 
   & > *
     --col 0
